--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="row">
     <div class="col-12 card bg-dark text-white">
             <div class="card-body" >
-              <p class="card-text" name="nota" id="nota" >Aqui irian las notas, si tuviera alguna.jpg :( no pude profe </p>
+              <p class="card-text" name="nota" id="nota" >Aqui hirian las notas, si tuviera alguna.jpg :( no pude profe </p>
               
               
             </div>
